fix(settings-dialog): gap on single column layout

--- a/src/app/components/settings/settings.component.scss
+++ b/src/app/components/settings/settings.component.scss
@@ -10,7 +10,7 @@
 
 	@include mixins.respond-to(large-down) {
 		flex-flow: column;
-		gap: unset;
+		gap: 8px;
 	}
 
 	.settings {
